2008-02-19  Joshua Sumali  <jsumali@redhat.com>

	* tools/netx/jnlp/tools/KeyTool.java: Instantiate usercerts before trying to
	load it.

2008-02-19  Joshua Sumali  <jsumali@redhat.com>

	* tools/netx/jnlp/security/CertWarningPane.java: Import the publisher's
	certificate instead of root certificate to trusted.certs.

2008-02-19  Joshua Sumali  <jsumali@redhat.com>

	* tools/netx/jnlp/resources/Messages.properties: Added new messages for
	trusted and untrusted certificates.
	* tools/netx/jnlp/runtime/JNLPClassloader.java: Fixed code for showing
	proper warning dialogs.
	* tools/netx/jnlp/security/CertsInfoPane.java: Added SHA-1 and MD5
	certificate fingerprints.
	* tools/netx/jnlp/security/MoreInfoPane.java
	(actionPerformed(e)): Changed getCerts() to getJarSigner()
	* tools/netx/jnlp/security/SecurityWarningDialog.java
	(DialogType): Added a new type of warning.
	(certs): Removed this field and
	(details): this field in favor of ...
	(jarSigner): this new field.
	(showAccessWarningDialog(accessType, file): Rewritten to show new warning
	type.
	(showMoreInfoDialog): Changed method signature to above field change.
	(showCertInfoDialog): Likewise.
	(getJarSigner): New Method.
	(updateUI): Added extra case for new warning type.
	* tools/netx/jnlp/services/ServiceUtil.java: Added extra parameter to
	method call for	changes in SecurityWarningDialog.
	* tools/netx/jnlp/tools/JarSigner.java
	(allVerified): Field refactored to ...
	(alreadyTrustPublisher): This.
	(rootInCacerts): New Field.
	(certPath): Likewise.
	(noSigningIssues): Likewise.
	(getAlreadyTrustPublisher): New method.
	(getRootInCacerts): Likewise.
	(getCertPath): Likewise.
	(allVerified): Method refactored to ...
	(noSigningIssues): This. 
	(checkTrustedCerts): New method.
	(getPublisher): Likewise.
	(getRoot): Likewise.
	* tools/netx/jnlp/security/AccessWarningPane.java: New file.
	* tools/netx/jnlp/security/CertWarningPane.java: New file.
	* tools/netx/jnlp/tools/KeyTool.java: New file.